# This file is part of network. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/network/master/COPYRIGHT. No part of network, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of network. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/network/master/COPYRIGHT.


[package]
name = "network-address-resolution-protocol"
description = "A domain model of Address Resolution Protocol (ARP) packets and associated types."
keywords = ["network", "ARP", "protocol", "packet", "ipv4"]
categories = ["data-structures", "network-programming"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/network"
repository = "https://github.com/lemonrock/network.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.1.0"

[dependencies]
dpdk-sys = { version = "0.0.6", optional = true }
libc = { version = "^0.2", optional = true }
likely = "0.1"
network-endian = { path = "../network-endian", version = "^0.1" }
network-ethernet = { path = "../network-ethernet", version = "^0.1" }
network-internet-protocol = { path = "../network-internet-protocol", version = "^0.1" }
serde = "1.0"
serde_derive = "1.0"

[features]
default = ["drop-arp-requests-with-non-zero-target-hardware-address"]

# Drops ARP requests with a non-zero target hardware address.
#
# Enabled by default.
#
# Violates RFC 5227.
drop-arp-requests-with-non-zero-target-hardware-address = []
