# This file is part of network. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/network/master/COPYRIGHT. No part of network, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of network. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/network/master/COPYRIGHT.


[package]
name = "network-collections"
description = "Collections suitable for use with networking, particularly when a fixed memory usage is required to prevent out-of-memory crashes. Includes two kinds of least recently used caches, a bounded hash map, a magic ring buffer (virtual ring buffer) and an arena allocator."
keywords = ["network", "cache", "magic", "ring", "buffer"]
categories = ["data-structures", "memory-management", "network-programming"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/network"
repository = "https://github.com/lemonrock/network.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.1.0"

[dependencies]
arrayvec = "^0.4"
libc = "^0.2"
likely = "^0.1"
network-time = { path = "../network-time", version = "^0.1" }

[target.'cfg(any(os = "android", os = "linux"))'.dependencies]
dpdk-unix = "0.0.5"
