# This file is part of network. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/network/master/COPYRIGHT. No part of network, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of network. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/network/master/COPYRIGHT.


[package]
name = "network-internet-protocol"
description = "A domain model of internet protocol version 4 and version 6 host addresses, masks, network addresses and packets and associated types."
keywords = ["network", "internet", "protocol", "packet", "ipv4"]
categories = ["data-structures", "network-programming"]
license = "AGPL-3.0"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/network"
repository = "https://github.com/lemonrock/network.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.1.10"

[dependencies]
arrayref = "^0.3"
digest = "^0.7"
dpdk-sys = { version = "^0.1", optional = true }
libc = "^0.2"
likely = "0.1"
network-check-sum = { path = "../network-check-sum", version = "^0.1" }
network-endian = { path = "../network-endian", version = "^0.1" }
network-ethernet = { path = "../network-ethernet", version = "^0.1" }
network-packet = { path = "../network-packet", version = "^0.1" }
network-time = { path = "../network-time", version = "^0.1" }
serde = "1.0"
serde_derive = "1.0"

[features]
default = ["drop-packets-with-ipv4-options", "drop-packets-with-ipv4-options-lacking-zero-padding", "drop-ipv4-packets-with-do-not-fragment-and-non-zero-identification", "drop-ipv6-packets-with-non-zero-flow-label", "drop-ipv6-fragments-when-first-reserved-field-is-not-zero", "drop-ipv6-fragments-when-second-reserved-field-is-not-zero", "drop-overly-small-ipv6-fragments-aggresively"]

# Drops internet protocol (IP) version 4 packets with IP options.
#
# Enabled by default.
#
# Violates RFC 791 but IP options are very rarely used, the few that are used have potential to be used as attack vectors and none have any meaning to this library.
drop-packets-with-ipv4-options = []

# Drops internet protocol (IP) version 4 packets with IP options which do not have zero padding at the end of the options list.
#
# Enabled by default.
#
# This is a strictness check with a very minor impact on performance.
drop-packets-with-ipv4-options-lacking-zero-padding = []

# Drops internet protocol (IP) version 4 packets with the Do Not Fragment (DF) flag set and a non-zero (fragment) identification.
#
# Enabled by default.
#
# Violates RFC 6864 Section 4.1 paragraph 5 but there is no good reason to send IP packets with DF set and a non-zero (fragment) identification.
# In particular, the identification field in these cases can be used as a covert channel and to infer the number of devices behind a NAT proxy.
drop-ipv4-packets-with-do-not-fragment-and-non-zero-identification = []

# Drop internet protocol (IP) version 6 packets whose flow label is not zero.
#
# Enabled by default.
#
# There is no good reason to be receiving such packets for ICMP, TCP and UDP flows.
drop-ipv6-packets-with-non-zero-flow-label = []

# Drop internet protocol (IP) version 6 packets whose fragment extension header has a non-zero first reserved field (8-bits).
#
# Enabled by default.
#
# Violates RFC 8200 Section 4.5 but there is no good reason to be receiving such packets.
drop-ipv6-fragments-when-first-reserved-field-is-not-zero = []

# Drop internet protocol (IP) version 6 packets whose fragment extension header has a non-zero second reserved field (2-bits).
#
# Enabled by default.
#
# Violates RFC 8200 Section 4.5 but there is no good reason to be receiving such packets.
drop-ipv6-fragments-when-second-reserved-field-is-not-zero = []

# We always drop fragments smaller than they need to be (444 byte MSS).
# This setting drops fragments (except the last) smaller than that possible using a 1280 byte MSS.
#
# Enabled by default.
#
# Violates RFC 8200 Section 4.5 but there is no good reason to be receiving such packets.
drop-overly-small-ipv6-fragments-aggresively = []
